# OSLib

./: README.md
cOS/: .bochsrc  .gitignore  Makefile  bochs_config
cOS/boot/: Makefile  boot.asm  loader.asm
cOS/kernel/: .gitignore  Makefile  kernel.lds
cOS/kernel/include/: cpu.h  debug.h  font.h  gate.h  interrupt.h  lib.h  linkage.h  memory.h  printk.h  ptrace.h  task.h  trap.h  type.h
cOS/kernel/src/: entry.sx  head.sx  interrupt.c  main.c  memory.c  printk.c  task.c  trap.c
rustOS/: .gitignore  Cargo.toml  Makefile  README.md  dependency
rustOS/.cargo/: config.toml
rustOS/boot/: Makefile  boot.asm  linker.ld  long_mode_start.asm
rustOS/isofiles/boot/grub/: grub.cfg
rustOS/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
rustOS/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
